Add security attack labs
